@@ -21,7 +21,6 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
 
-import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -32,6 +31,7 @@ import java.sql.SQLException;
 import java.sql.SQLWarning;
 import java.sql.Statement;
 import java.util.concurrent.TimeUnit;
+import java.util.function.Consumer;
 
 @Service
 @Profile("install")
@@ -56,98 +56,75 @@ public class SqlDatabaseUpgradeService implements DatabaseEntitiesUpgradeService
     public void upgradeDatabase(String fromVersion) throws Exception {
         switch (fromVersion) {
             case "1.0.1":
-                try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
-                    log.info("Updating schema ...");
-                    if (isOldSchema(conn, 1000000)) {
-                        try {
-                            conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN msg_expiry_interval int;"); //NOSONAR, ignoring because method used to execute thingsboard_mqtt_broker database upgrade script
-                        } catch (Exception ignored) {
-                        }
-                        try {
-                            conn.createStatement().execute("UPDATE tb_schema_settings SET schema_version = 1001000;");
-                        } catch (Exception ignored) {
-                        }
+                updateSchema("1.0.0", 1000000, "1.1.0", 1001000, conn -> {
+                    try {
+                        conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN msg_expiry_interval int;"); //NOSONAR, ignoring because method used to execute thingsboard_mqtt_broker database upgrade script
+                    } catch (Exception ignored) {
                     }
-                    log.info("Schema updated.");
-                }
+                });
                 break;
             case "1.1.0":
-                try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
-                    log.info("Updating schema ...");
-                    if (isOldSchema(conn, 1001000)) {
-                        try {
-                            conn.createStatement().execute("UPDATE tb_schema_settings SET schema_version = 1002000;");
-                        } catch (Exception ignored) {
-                        }
-                    }
-                    log.info("Schema updated.");
-                }
+                updateSchema("1.1.0", 1001000, "1.2.0", 1002000);
                 break;
             case "1.2.0":
-                try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
-                    log.info("Updating schema ...");
-                    if (isOldSchema(conn, 1002000)) {
-                        try {
-                            conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN payload_format_indicator int;");
-                        } catch (Exception ignored) {
-                        }
-                        try {
-                            conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN content_type varchar(255);");
-                        } catch (Exception ignored) {
-                        }
-                        try {
-                            conn.createStatement().execute("UPDATE tb_schema_settings SET schema_version = 1002001;");
-                        } catch (Exception ignored) {
-                        }
+                updateSchema("1.2.0", 1002000, "1.2.1", 1002001, conn -> {
+                    try {
+                        conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN payload_format_indicator int;");
+                    } catch (Exception ignored) {
                     }
-                    log.info("Schema updated.");
-                }
+                    try {
+                        conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN content_type varchar(255);");
+                    } catch (Exception ignored) {
+                    }
+                });
                 break;
             case "1.2.1":
-                try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
-                    log.info("Updating schema ...");
-                    if (isOldSchema(conn, 1002001)) {
-                        runSchemaUpdateScript(conn, "1.3.0");
-                        try {
-                            conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN response_topic varchar(255);");
-                        } catch (Exception ignored) {
-                        }
-                        try {
-                            conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN correlation_data bytea;");
-                        } catch (Exception ignored) {
-                        }
-                        try {
-                            conn.createStatement().execute("UPDATE tb_schema_settings SET schema_version = 1003000;");
-                        } catch (Exception ignored) {
-                        }
+                updateSchema("1.2.1", 1002001, "1.3.0", 1003000, conn -> {
+                    try {
+                        conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN response_topic varchar(255);");
+                    } catch (Exception ignored) {
                     }
-                    log.info("Schema updated.");
-                }
+                    try {
+                        conn.createStatement().execute("ALTER TABLE device_publish_msg ADD COLUMN correlation_data bytea;");
+                    } catch (Exception ignored) {
+                    }
+                });
                 break;
             case "1.3.0":
-                try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
-                    log.info("Updating schema ...");
-                    if (isOldSchema(conn, 1003000)) {
-                        try {
-                            conn.createStatement().execute("UPDATE tb_schema_settings SET schema_version = 1003001;");
-                        } catch (Exception ignored) {
-                        }
-                    }
-                    log.info("Schema updated.");
-                }
+                updateSchema("1.3.0", 1003000, "1.3.1", 1003001);
                 break;
             default:
                 throw new RuntimeException("Unable to upgrade SQL database, unsupported fromVersion: " + fromVersion);
         }
     }
 
-    private void runSchemaUpdateScript(Connection connection, String version) throws Exception {
-        Path schemaUpdateFile = Paths.get(installScripts.getUpgradeDataDir(), "upgrade", version, SCHEMA_UPDATE_SQL);
-        loadSql(schemaUpdateFile, connection);
+    private void updateSchema(String oldVersionStr, int oldVersion, String newVersionStr, int newVersion) {
+        updateSchema(oldVersionStr, oldVersion, newVersionStr, newVersion, null);
+    }
+
+    private void updateSchema(String oldVersionStr, int oldVersion, String newVersionStr, int newVersion, Consumer<Connection> additionalAction) {
+        try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
+            log.info("Updating schema ...");
+            if (isOldSchema(conn, oldVersion)) {
+                Path schemaUpdateFile = Paths.get(installScripts.getDataDir(), "upgrade", oldVersionStr, SCHEMA_UPDATE_SQL);
+                if (Files.exists(schemaUpdateFile)) {
+                    loadSql(schemaUpdateFile, conn);
+                }
+                if (additionalAction != null) {
+                    additionalAction.accept(conn);
+                }
+                conn.createStatement().execute("UPDATE tb_schema_settings SET schema_version = " + newVersion + ";");
+                log.info("Schema updated to version {}", newVersionStr);
+            } else {
+                log.info("Skip schema re-update to version {}. Use env flag 'SKIP_SCHEMA_VERSION_CHECK' to force the re-update.", newVersionStr);
+            }
+        } catch (Exception e) {
+            log.error("Failed updating schema!!!", e);
+        }
     }
 
     private void loadSql(Path sqlFile, Connection conn) throws Exception {
-        String sql = new String(Files.readAllBytes(sqlFile), Charset.forName("UTF-8"));
+        String sql = Files.readString(sqlFile);
         Statement st = conn.createStatement();
         st.setQueryTimeout((int) TimeUnit.HOURS.toSeconds(3));
         st.execute(sql);//NOSONAR, ignoring because method used to execute thingsboard_mqtt_broker database upgrade script
@@ -167,7 +144,11 @@ public class SqlDatabaseUpgradeService implements DatabaseEntitiesUpgradeService
         }
     }
 
-    protected boolean isOldSchema(Connection conn, long fromVersion) {
+    private boolean isOldSchema(Connection conn, long fromVersion) {
+        if (getEnv("SKIP_SCHEMA_VERSION_CHECK", false)) {
+            log.info("Skipped DB schema version check due to SKIP_SCHEMA_VERSION_CHECK set to true!");
+            return true;
+        }
         boolean isOldSchema = true;
         try {
             Statement statement = conn.createStatement();
@@ -185,6 +166,14 @@ public class SqlDatabaseUpgradeService implements DatabaseEntitiesUpgradeService
             log.info("Failed to check current PostgreSQL schema due to: {}", e.getMessage());
         }
         return isOldSchema;
+    }
+
+    private static boolean getEnv(String name, boolean defaultValue) {
+        String env = System.getenv(name);
+        if (env == null) {
+            return defaultValue;
+        }
+        return Boolean.parseBoolean(env);
     }
 
 }
